// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ObjectTypeBadge > snapshots > renders animal type (dog) with icon and styling 1`] = `
<span
  aria-label="Detected object: Animal"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-amber-500/10 text-amber-400 border-amber-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-paw-print w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="11"
      cy="4"
      r="2"
    />
    <circle
      cx="18"
      cy="8"
      r="2"
    />
    <circle
      cx="20"
      cy="16"
      r="2"
    />
    <path
      d="M9 10a5 5 0 0 1 5 5v3.5a3.5 3.5 0 0 1-6.84 1.045Q6.52 17.48 4.46 16.84A3.5 3.5 0 0 1 5.5 10Z"
    />
  </svg>
  Animal
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders bicycle type with icon and styling 1`] = `
<span
  aria-label="Detected object: Bicycle"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-cyan-500/10 text-cyan-400 border-cyan-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-car w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"
    />
    <circle
      cx="7"
      cy="17"
      r="2"
    />
    <path
      d="M9 17h6"
    />
    <circle
      cx="17"
      cy="17"
      r="2"
    />
  </svg>
  Bicycle
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders case-insensitive input (PERSON) 1`] = `
<span
  aria-label="Detected object: Person"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-blue-500/10 text-blue-400 border-blue-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="12"
      cy="7"
      r="4"
    />
  </svg>
  Person
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders lg size variant correctly 1`] = `
<span
  aria-label="Detected object: Person"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-base px-3 py-1.5 bg-blue-500/10 text-blue-400 border-blue-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="12"
      cy="7"
      r="4"
    />
  </svg>
  Person
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders md size variant correctly 1`] = `
<span
  aria-label="Detected object: Person"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-sm px-2.5 py-1 bg-blue-500/10 text-blue-400 border-blue-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="12"
      cy="7"
      r="4"
    />
  </svg>
  Person
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders package type with icon and styling 1`] = `
<span
  aria-label="Detected object: Package"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-green-500/10 text-green-400 border-green-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-package w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
    />
    <path
      d="M12 22V12"
    />
    <polyline
      points="3.29 7 12 12 20.71 7"
    />
    <path
      d="m7.5 4.27 9 5.15"
    />
  </svg>
  Package
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders person type with icon and styling 1`] = `
<span
  aria-label="Detected object: Person"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-blue-500/10 text-blue-400 border-blue-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="12"
      cy="7"
      r="4"
    />
  </svg>
  Person
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders sm size variant correctly 1`] = `
<span
  aria-label="Detected object: Person"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-blue-500/10 text-blue-400 border-blue-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="12"
      cy="7"
      r="4"
    />
  </svg>
  Person
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders unknown type with icon and styling 1`] = `
<span
  aria-label="Detected object: Unknown_object"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-gray-500/10 text-gray-400 border-gray-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  Unknown_object
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders vehicle type (car) with icon and styling 1`] = `
<span
  aria-label="Detected object: Vehicle"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-purple-500/10 text-purple-400 border-purple-500/30"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-car w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"
    />
    <circle
      cx="7"
      cy="17"
      r="2"
    />
    <path
      d="M9 17h6"
    />
    <circle
      cx="17"
      cy="17"
      r="2"
    />
  </svg>
  Vehicle
</span>
`;

exports[`ObjectTypeBadge > snapshots > renders with custom className 1`] = `
<span
  aria-label="Detected object: Vehicle"
  class="inline-flex items-center gap-1 rounded-full border font-medium text-xs px-2 py-0.5 bg-purple-500/10 text-purple-400 border-purple-500/30 custom-badge ml-2"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-car w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 17h2c.6 0 1-.4 1-1v-3c0-.9-.7-1.7-1.5-1.9C18.7 10.6 16 10 16 10s-1.3-1.4-2.2-2.3c-.5-.4-1.1-.7-1.8-.7H5c-.6 0-1.1.4-1.4.9l-1.4 2.9A3.7 3.7 0 0 0 2 12v4c0 .6.4 1 1 1h2"
    />
    <circle
      cx="7"
      cy="17"
      r="2"
    />
    <path
      d="M9 17h6"
    />
    <circle
      cx="17"
      cy="17"
      r="2"
    />
  </svg>
  Vehicle
</span>
`;
